--- a/src/components/SearchBox/index.css
+++ b/src/components/SearchBox/index.css
@@ -71,14 +71,15 @@
 }
 
 @media (max-width: 500px){
-    .search-box__form-input{
-        width: 17rem;
-    }
     .search-box__form {
         padding: 0;
     }
     .search-box__form-input {
-        width: 16rem;
+        width: 20rem;
         font-size: 12px;
+    }
+    .search-box {
+        display: flex;
+        justify-content: center;
     }
 }
